@@ -1,5 +1,10 @@
 2009-10-24  Chong Yidong  <cyd@stupidchicken.com>
 
+	* whitespace.el (whitespace-mode, whitespace-newline-mode)
+	(global-whitespace-mode, global-whitespace-newline-mode)
+	(whitespace-toggle-options, global-whitespace-toggle-options): Doc
+	fix (Bug#3660).
+
 	* nxml/nxml-mode.el (nxml-balanced-close-start-tag): Use the value
 	of xmltok-start before the end tag was inserted (Bug#2840).
 
